@@ -35,6 +35,8 @@ G_BEGIN_DECLS
 typedef struct _ECalModelCalendarPrivate ECalModelCalendarPrivate;
 
 typedef enum {
+	/* If you add new items here or reorder them, you have to update the
+	   .etspec files for the tables using this model */
 	E_CAL_MODEL_CALENDAR_FIELD_DTEND = E_CAL_MODEL_FIELD_LAST,
 	E_CAL_MODEL_CALENDAR_FIELD_LOCATION,
 	E_CAL_MODEL_CALENDAR_FIELD_TRANSPARENCY,
