@@ -37,6 +37,8 @@ G_BEGIN_DECLS
 typedef struct _ECalModelPrivate ECalModelPrivate;
 
 typedef enum {
+	/* If you add new items here or reorder them, you have to update the
+	   .etspec files for the tables using this model */
 	E_CAL_MODEL_FIELD_CATEGORIES,
 	E_CAL_MODEL_FIELD_CLASSIFICATION,
 	E_CAL_MODEL_FIELD_COLOR,            /* not a real field */
@@ -57,6 +59,8 @@ typedef struct {
 	/* private data */
 	ECellDateEditValue *dtstart;
 	ECellDateEditValue *dtend;
+	ECellDateEditValue *due;
+	ECellDateEditValue *completed;
 } ECalModelComponent;
 
 typedef struct {
